# servicecatalogtordf

./: .flake8  .readthedocs.yaml  .readthedocs.yml  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: coverage.yml  release.yml  test-pypi.yml  tests.yml
docs/: __init__.py  conf.py  index.rst  reference.rst  requirements.txt
src/servicecatalogtordf/: __init__.py  criterion_requirement.py  event.py  evidence.py  legal_resource.py  public_organization.py  rule.py  service.py
tests/: __init__.py  test_criterion_requirement.py  test_event.py  test_evidence.py  test_legal_resource.py  test_public_organization.py  test_rule.py  test_service.py  testutils.py
