[tool.poetry]
authors = ["Stig B. Dørmænen <stigbd@gmail.com>"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
description = "A library that will map a service catalog (cpsv) to rdf"
documentation = "https://servicecatalogtordf.readthedocs.io"
homepage = "https://github.com/Informasjonsforvaltning/servicecatalogtordf"
license = "Apache-2.0"
name = "servicecatalogtordf"
readme = "README.md"
repository = "https://github.com/Informasjonsforvaltning/servicecatalogtordf"
version = "0.1.0-alpha.13"

[tool.poetry.dependencies]
datacatalogtordf = "^1.4.8"
python = ">=3.8,<3.10"
skolemizer = "^1.1.0"

[tool.poetry.dev-dependencies]
Pygments = "^2.9.0"
Sphinx = "^4.0.1"
bandit = "1.7.2"
black = "^22.1.0"
darglint = "^1.8.1"
flake8 = "^4.0.1"
flake8-annotations = "^2.7.0"
flake8-bandit = "^2.1.2"
flake8-black = "^0.3.2"
flake8-bugbear = "^22.1.11"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.1"
mypy = "^0.931"
pytest-mock = "^3.6.1"
pytype = "^2022.2.23"
sphinx-autodoc-typehints = "^1.12.0"
xdoctest = {extras = ["all"], version = "^0.15.4"}
nox = "^2022.1.7"
nox-poetry = "^0.9.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = false
source = ["servicecatalogtordf"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.mypy]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = false
warn_unreachable = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "skolemizer.*",
  "datacatalogtordf.*",
  "pytest_mock.*",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
